--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 
 /*referencia a raiz do projeto*/
 :root {
@@ -58,13 +58,13 @@ li a:hover {
 
 /*Fim da nav*/
 
-/* Inicio do Header */
+/* Inicio do Header referenciando a class header com . no inicio */
 .header {
     background: url(/Images/pexels-nao-triponez-129207.jpg);
     background-position: center; 
     background-size: cover; /*para cobrir toda a tela*/
     height: 100vh; 
-    font-family: 'Montserrat', sans-serif;
+    font-family: "Playfair Display", serif; /*fonte do header*/
     font-weight: normal;
 
     /*flexbox*/
@@ -106,3 +106,54 @@ li a:hover {
     transform: translateY(60px); /*para ficar embaixo do texto*/
     font-family: 'Montserrat', sans-serif;
 }
+
+/*fim do header*/
+
+/*Inicio da seção Our Story*/
+
+#our-story {
+    height: 100vh; /*altura da seção*/
+    margin-top: 15%;
+    display: flex; /*flexbox*/
+    flex-wrap: wrap; /*para quebrar a linha*/
+    justify-content: space-around;
+    align-items: center;
+}
+
+.img {
+    width: 400px;
+    height: 400px;
+    background: url("Images/pexels-chitokan-2183027-removebg-preview.png");
+    background-position: center; /*para ficar no centro*/
+    background-size: cover; /*para cobrir toda a tela*/
+}
+
+.title-style {
+    display: flex;  
+    align-items: center;
+}
+
+.title {
+    font-family: 'Playfair Display', serif; /*fonte do título*/
+    font-size: 4rem;
+    color: #fff;
+    transform: translateX(-100px); 
+}
+
+.line {
+    width: 100px;
+    height: 2px;
+    background: #fff;
+    transform: translateX(-120px);
+}
+
+/*referente ao texto da seção no paragrafo*/
+.section-content p {
+    max-width: 500px;
+    color: #fff;
+    font-family: sans-serif;
+    line-height: 20px;
+    margin: 20px 0;
+}
+
+/*fim da seção our story*/
