--- a/style.css
+++ b/style.css
@@ -260,3 +260,57 @@ li a:hover {
 
 /*Fim da seção de produtos*/
 
+/*Inicio Footer*/
+footer {
+    height: 50vh;
+    display: flex;
+    flex-wrap: wrap; 
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    font-family: sans-serif;
+    margin-top: 10px;
+}
+
+footer .container {
+    margin: 20px;
+    max-width: 300px;
+    text-align: center;
+}
+
+footer .heading-info {
+    margin-bottom: 20px;
+}
+
+footer p {
+    line-height: 25px;
+}
+
+span {
+    color: var(--main-color);
+}
+
+hr {
+    margin-bottom: 20px;
+    border: var(--main-color);
+    width: 500px;
+    margin: 0 auto;
+}
+
+.para {
+    color: #fff;
+    font-family: sans-serif;
+    text-align: center;
+    margin-top: 20px;
+}
+
+.lines {
+    width: 100%;
+    height: 1px;
+    background: #ffffff3b;
+    margin: 15px;
+}
+
+/*fim do footer*/
+
+/*media query para telas menores que 768px*/
